Scaffold front end and use webpack for module loading.

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <title>Get Email Image</title>
 </head>
 <body>
-HEY!
+  <div ng-view></div>
+  <script src="bundle.js"></script>
 </body>
 </html>
