--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,12 @@
 <html>
 <head>
   <title>Get Email Image</title>
+  <script src="bundle.js"></script>
 </head>
 <body>
+  <header>
+    <h3>Email Image Search</h3>
+  </header>
   <div ng-view></div>
-  <script src="bundle.js"></script>
 </body>
 </html>
