--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,11 @@
   <script src="bundle.js"></script>
 </head>
 <body>
-  <header>
-    <h3>Email Image Search</h3>
-  </header>
-  <div ng-view></div>
+  <div class="container-fluid">
+    <header class="row">
+      <h3>Email Image Search</h3>
+    </header>
+    <div class="row" ng-view></div>
+  </div>
 </body>
 </html>
