Add error messaging for invalid form and no data returned.

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
   <script src="bundle.js"></script>
 </head>
 <body>
-  <div class="container-fluid">
-    <header class="row">
+  <nav>
+    <div class="container">
       <h3>Email Image Search</h3>
-    </header>
-    <div class="row" ng-view></div>
-  </div>
+    </div>
+  </nav>
+  <div ng-view></div>
 </body>
 </html>
