--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Get Email Image</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <script src="bundle.js"></script>
 </head>
 <body>
